# QuDAP

./: .gitignore  256636_06272024_12_1_300.0_K_20.0_uA_Run_12.csv  346776_06272024_12_12_300.0_K_20.0_uA_Run_12.csv  444804_06272024_qw_qw_300.0_K_20.0_mA_Run_qw.csv  772739_06272024_qw_qw_300.0_K_20.0_uA_Run_qw.csv  Experiment_Log.txt  LICENSE  QdMultiVu.log.1  README.md  Test_pyvisa.py  initalization.py  main.py  pyproject.toml  requirements.txt  standardized_intensity_matrix.csv  standardized_intensity_matrix1.csv
GUI/: QdMultiVu.log.1  QdMultiVu.log.2  Test.py  font.py  initalization.py  test2.py  test22.py  test3.py  test5.py  testtt.py
GUI/Dashboard/: Dashboard.py  QGroupbox.qss  QLabel.qss  QLabel_1.qss
GUI/ETO/: ETO.py
GUI/FMR/: FMR.py
GUI/Plot/: plotting.py
GUI/QDesign/: BNC845RF.py  DSP7265.py  Keithley2182nv.py  Keithley6221.py  PPMS.py  example_remote_client.py  example_remote_server.py  measurement.py  run_server.py
GUI/QDesign/MeasurementMain/: NV_Read_Function.py  PPMS.py
GUI/QSS/: QButtonWidget.qss  QListWidget.qss  QListWidget_middle.qss  QScrollbar.qss  QSideWidget.qss
GUI/SHG/: Imaging_SHG.py  QButtonWidget.qss  QRadioButtonDisable.qss  QTreeWidget.qss  SHG.py  SHG_General.py  SHG_Imaging.py  SHG_Temp_Dep.py  Temp_set.py
GUI/Setting/: Setting.py
Paper/: paper.bib  paper.crossref  paper.md
QuDAP/: Example_1  StartGUI.py  initalization.py  main.py  requirements.txt  test2.py  test_gui.py
QuDAP/GUI/: test2.py  testtt.py
QuDAP/GUI/Dashboard/: Dashboard.py  QLabel.qss  QLabel_1.qss
QuDAP/GUI/ETO/: ETO.py  Hall Rxx Data Processing.py
QuDAP/GUI/Experiment/: Keithley6221.py  PPMS.py  QD.py  ReadInstrument.py  eto_measurement.py  fmr_measurement.py  integrated_experiment.py  measurement.py  rigol_experiment.py  visa_simulation.yaml
QuDAP/GUI/Experiment/LockInAmplifier/: dsp_gui.py  sr_gui.py
QuDAP/GUI/Experiment/MeasurementMain/: PPMS.py
QuDAP/GUI/Experiment/Nanovoltmeter/: gui.py
QuDAP/GUI/Experiment/PPMS/: gui.py
QuDAP/GUI/Experiment/RF/: bnc_gui.py  gui.py
QuDAP/GUI/FMR/: DataSorting.py  FMR.py  FMRDataInterpolation.py  FMRDataSorting.py  GUI.py
QuDAP/GUI/Icon/: AdobeStock_549927879.ai
QuDAP/GUI/Plot/: plotting.py
QuDAP/GUI/QDesign/: BNC845RF.py  DSP7265.py  Keithley2182nv.py  Keithley6221.py  PPMS.py  ReadInstrument.py  measurement.py  sr830.py  test.yaml  xps.py
QuDAP/GUI/QSS/: QComboWidget.qss  QListWidget_middle.qss
QuDAP/GUI/SHG/: SHG.py  SHG_General.py
QuDAP/GUI/Setting/: AboutSoftware.py  Contact.py  Setting.py  __init__.py
QuDAP/GUI/VSM/: QButtonWidget.qss  VSM.py  VSMDataExtraction.py  VSMDataProcessing.py  VSMDataProcessing_old.py  VSM_Work_Flow.md  qd.py  vsm_background_removal.py
QuDAP/VSM/: qd.py
QuDAP/instrument/: BK_precision_9129B.py  BNC845.py  DSP7265.py  instrument_connection.py  kepco.py  rigol_spectrum_analyzer.py
QuDAP/misc/: FileExport.py  ReadInstrument.py  dragdropwidget.py  logger.py  vsm_magnetic_contribution.py  vsm_tanh_fit.py
Update/: client.py  sever.py
doc/demo/: Measurement Feature Document.pptx
doc/demo/SHG Sample Data/: Experimental_Parameters.txt  Processed_First_Data.csv  SHG_Sample_200deg.txt
(+9 files in other folders)
